# Willow

./: README.md  pyproject.toml
tests/: test_core.py
willow/: __init__.py  algebra.py  cli.py  geometry.py  number_theory.py  stats.py
