[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "willow"
version = "0.1.0"
description = "A Python package that helps students with math."
readme = "README.md"
authors = [{name = "Your Name"}]
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
sym = ["sympy>=1.12"]

[project.scripts]
willow = "willow.cli:main"